--- a/styles.css
+++ b/styles.css
@@ -673,7 +673,7 @@ body {
   color: transparent;
   -webkit-background-clip: text;
   position: relative;
-  padding-bottom: 15px;
+  padding: 15px;
   border: none;
 }
 
