--- a/styles.css
+++ b/styles.css
@@ -1531,8 +1531,15 @@ body {
 .ttec-left p {
   width: 100px;
 }
+.chevron-mobile {
+  display: none;
+}
 
 @media screen and (max-width: 1050px) {
+  .chevron-mobile {
+    display: flex;
+    margin-left: auto;
+  }
   .ft-image1,
   .ft-image2,
   .ft-image3 {
@@ -1875,7 +1882,7 @@ body {
     max-width: 130px;
   }
   .ttec-left {
-    max-width: 250px;
+    max-width: 375px;
   }
   .ttec-left p {
     width: 100px;
@@ -1910,7 +1917,7 @@ body {
     justify-content: flex-start;
   }
   .ttec-left {
-    max-width: 200px;
+    max-width: 375px;
   }
   .chevron-icon {
     display: none;
@@ -2003,7 +2010,7 @@ body {
     margin-left: 0;
   }
   .ttec-left {
-    max-width: 200px;
+    max-width: 375px;
   }
   .tt-header {
     font-size: var(--large-font-size);
